# Copilot-Echo

./: .coverage  .gitignore  COMMANDS.md  README.md  pyproject.toml  requirements.txt  run.bat  run.ps1
config/: example.yaml
docs/: MVP.md  project_knowledge.md  wakeword_training.md
models/: hey_echo.onnx  hey_echo.onnx.data
src/copilot_echo/: agent.py  app.py  config.py  errors.py  logging_conf.py  mcp_client.py  mcp_config.py  orchestrator.py  paths.py  project_mcp.py  projects.py  prompt_builder.py  repo.py  tray.py
src/copilot_echo.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/copilot_echo/voice/: __init__.py  audio.py  autonomous.py  call_detector.py  commands.py  list_devices.py  list_voices.py  loop.py  stt.py  tts.py  wakeword.py
tests/: conftest.py  test_agent.py  test_config.py  test_errors.py  test_logging_conf.py  test_mcp_config.py  test_orchestrator.py  test_paths.py  test_project_mcp.py  test_projects.py  test_prompt_builder.py  test_tray.py
tests/voice/: conftest.py  test_audio.py  test_autonomous.py  test_call_detector.py  test_commands.py  test_loop.py  test_stt.py  test_tts.py  test_wakeword.py
