[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "copilot-echo"
version = "0.1.0"
description = "Local-only Windows tray app for voice-driven Copilot workflows"
readme = "README.md"
requires-python = ">=3.11"

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio", "pytest-cov"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]

[tool.coverage.run]
source = ["copilot_echo"]

[tool.coverage.report]
show_missing = true
exclude_lines = ["pragma: no cover", "if __name__"]
